--- a/templates/home.html
+++ b/templates/home.html
@@ -130,7 +130,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/channels/FE619">
+                    <a href="/channel/FE619">
                         <span>BTS</span>
                     </a>
                 </li>
